[metadata]
name = vast-cli-gpropf
version = 0.1.7
author = Greg Propf
author_email = gpropf@gmail.com
description = The open source python command line interface for the Vast.ai GPU sharing service.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vast-ai/vast-python
scripts = bin/make_command_docs.py, bin/postprocess.py, bin/vast.py, bin/vast, bin/watcher.sh
project_urls =
    Bug Tracker = https://github.com/vast-ai/vast-python/issues
    Vast.ai Website = https://vast.ai/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6.9

[options.packages.find]
where = src